--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "config": "node dist/index.js --config"
   },
   "keywords": [
     "mcp",
@@ -17,7 +18,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.2.2",
+    "@modelcontextprotocol/sdk": "^1.12.1",
     "axios": "^1.6.7",
     "zod": "^3.22.4"
   },
